test date/time module

--- a/app/profile/profile.module.css
+++ b/app/profile/profile.module.css
@@ -94,6 +94,19 @@
   color: var(--color-username);
 }
 
+.usernameInput {
+  border: none;
+  background: transparent;
+  text-align: center;
+  font-size: 20px;
+  font-weight: 700;
+  color: var(--color-username);
+  outline: none;
+  padding: 0;
+  width: 140px; /* tweak so it doesn't jump around */
+}
+
+
 .crown {
   font-size: 18px;
 }
