got rid of email edit availability

--- a/app/profile/profile.module.css
+++ b/app/profile/profile.module.css
@@ -537,3 +537,11 @@
 .lockedClickable {
   cursor: pointer !important;
 }
+
+
+.emailDisplayText {
+  width: 100%;
+  display: block;
+  text-align: center;
+  opacity: 0.95;
+}
