question bank categorizing topics and subtopics

--- a/app/globals.css
+++ b/app/globals.css
@@ -75,7 +75,16 @@
   --color-settings-bg: #f1f5f8;
   --color-logout-border: #d2c79a;
 
+  --color-premium-gradient-20: linear-gradient(
+  90deg,
+  rgba(43, 124, 175, 0.2) 0%,
+  rgba(255, 197, 66, 0.2) 100%
+);
+
+
 }
+
+
 
 /* Base page background + text color */
 html,
